# links-db

./: .gitignore  AGENTS.md  README.md  REPO_MAP.md  pyproject.toml
src/links_db/: __init__.py  __main__.py  api.py  cli.py  db.py  ingest.py  models.py  settings.py
src/links_db/templates/: base.html  item.html  list.html  reader.html
tests/: test_duplicates.py  test_extraction.py  test_list_filters.py  test_pdf_detection.py
tests/fixtures/: sample.html
