[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "links-db"
version = "0.1.0"
description = "Local read-later: SQLite + FastAPI + Typer CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "trafilatura>=1.12.0",
  "readability-lxml>=0.8.1",
  "nh3>=0.2.18",
  "python-ulid>=2.7.0",
  "typer>=0.12.0",
  "jinja2>=3.1.4",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
links = "links_db.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
links_db = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
